# deep_at_ifca

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
deep_at_ifca/: main.py  utils.py
deep_at_ifca/projects/: ai4eosc.yaml  anonymity.yaml  bird-sound.yaml  chest-x-ray.yaml  conus-classification.yaml  covid-genetics.yaml  covid-incidence.yaml  covid-nursing-homes.yaml  covid-radiology.yaml  covid-spanish.yaml  damic.yaml  deephdc.yaml  face.yaml  federated-learning.yaml  fire-monitoring.yaml  hep-particle-collisions.yaml  imagine.yaml  mods.yaml  phytoplankton-classification.yaml  plant-classification.yaml  satellite-super-resolution.yaml  seed-classification.yaml  species-distribution.yaml  statistical-downscaling.yaml  template-ended.yaml  template-ongoing.yaml  water-depth.yaml  water-quality-satellites.yaml  water-quality-sensors.yaml  water-quality.yaml  winegut.yaml  zooplankton-classification.yaml
deep_at_ifca/static/css/: screen.css
deep_at_ifca/templates/: base.html  home.html  project.html
