[metadata]
name = deep-at-ifca
summary = This portals gathers all deep learning project developed at IFCA.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Ignacio Heredia Cachá
author-email = iheredia@ifca.unican.es

home-page = http://deep.ifca.es/

python-requires = >=3.8

license = Apache-2
license_file = LICENSE

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

